# lqr_ros2_node_project

./: CMakeLists.txt  README.md  csv_publisher.cpp  node.cpp  package.xml  vallelunga.csv  vallelunga_sampled.csv  varano_autocross.csv  varano_autocross_x_y_r_v.csv
circuits/: varano_autocross_x_y_r_v.csv  varano_x_y_r_v.csv
config/: params.yaml
include/lqr/: lqr.hpp
include/lqr_node/: lqr_node.hpp
launch/: lqr_node_launch.py
src/: lqr.cpp  lqr_node.cpp
