<?xml version="1.0"?>
<package format="3">
  <name>lqr_ros2_node_project</name>
  <version>0.1.0</version>
  <description>Un nodo ROS2 che legge i messaggi Odometry</description>
  <maintainer email="tu@email.com">Il tuo Nome</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  
  <buildtool_depend>nav_msgs</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
