<?xml version="1.0"?>
<package format="3">
  <name>lqr_ros2_node_project</name>
  <version>0.1.0</version>
  <description>Un nodo ROS2 che legge i messaggi Odometry</description>
  <maintainer email="todo@email.com">Il tuo Nome</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>

  <export>
    <launch>launch</launch>
  </export>
</package>
